<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDE6A0"
    android:padding="5dp"
    tools:context=".ShopActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="38sp"
            android:fontFamily="@font/muli_light_italic"
            android:textColor="@color/Black"
            android:text="Shop">

        </TextView>
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/weights">

            </ImageView>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">

        <TextView

            android:id="@+id/weight"
            android:layout_width="150dp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:fontFamily="@font/muli_light_italic"
            android:textColor="@color/White"
            android:background="@color/colorPrimaryDark"
            android:text="@string/Weights"
            android:gravity="center_horizontal">

        </TextView>

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/yoga_mat">

            </ImageView>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/yoga_met"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:fontFamily="@font/muli_light_italic"
            android:textColor="@color/White"
            android:background="@color/colorPrimaryDark"
            android:text="@string/Yoga_mat">

        </TextView>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/hula_hoops">

            </ImageView>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/hula_hoops"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:fontFamily="@font/muli_light_italic"
            android:textColor="@color/White"
            android:background="@color/colorPrimaryDark"
            android:text="@string/Hula_hoops">

        </TextView>
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="200dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_height="200dp"
                android:src="@drawable/football">

            </ImageView>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/football"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:fontFamily="@font/muli_light_italic"
            android:textColor="@color/White"
            android:background="@color/colorPrimaryDark"
            android:text="@string/Football">

        </TextView>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/bbbb">

            </ImageView>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/bouncy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:textSize="28sp"
            android:fontFamily="@font/muli_light_italic"
            android:textColor="@color/White"
            android:background="@color/colorPrimaryDark"
            android:text="@string/Bouncy_hopper">

        </TextView>
    </LinearLayout>


    </LinearLayout>
</ScrollView>